Code cleanup work on files (Java issues)